test/expected/perr_bad_heredoc_delimiter.out
shit: 2:8: error: Expected a heredoc delimiter.
     2 |  cat << >foo
       |         ^~ here.
